<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/eliud"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonNewPlan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="308dp"
        android:background="@drawable/button_background"
        android:text="@string/buttonNewPlan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonOld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="308dp"
        android:background="@drawable/button_background"
        android:text="@string/buttonOld"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.737"
        app:layout_constraintStart_toEndOf="@+id/buttonNewPlan" />

    <TextView
        android:id="@+id/textViewNaslov2"
        android:layout_width="144dp"
        android:layout_height="74dp"
        android:layout_marginTop="128dp"
        android:backgroundTintMode="screen"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/textViewNaslov2"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonNewPlan"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNaslov1"
        android:layout_width="124dp"
        android:layout_height="69dp"
        android:layout_marginTop="128dp"
        android:backgroundTintMode="screen"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/textViewNaslov1"
        android:textAlignment="viewEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/textViewNaslov2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>